docs/examples/errors/error_handlers/src/bearer_token/mod.rs
mod error;
mod route;
mod token;

pub use error::BearerExtractionError;
pub use route::auth;
pub use token::BearerToken;
